training on cleaned big dataset for JABES results

--- a/MLclassifiers-b.ipynb
+++ b/MLclassifiers-b.ipynb
@@ -20,9 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-17 21:06:38.529164: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-05-17 21:06:39.228172: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2023-05-17 21:06:39.832389: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-17 21:06:39.832805: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "[nltk_data] Downloading package words to /home/aurelie/nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/aurelie/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to /home/aurelie/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import librairies\n",
     "import os\n",
@@ -64,12 +84,14 @@
     "\n",
     "from scipy.sparse import csr_matrix, lil_matrix\n",
     "from yellowbrick.text import FreqDistVisualizer, TSNEVisualizer\n",
-    "\n"
+    "\n",
+    "from utils_text_processing import *\n",
+    "from utils_visualization import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,18 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Activation PEP8\n",
-    "%load_ext pycodestyle_magic\n",
-    "%pycodestyle_on"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +124,7 @@
     "    \"whitegrid\", {\n",
     "        'axes.edgecolor': 'k',\n",
     "        'axes.linewidth': 1,\n",
-    "        'axes.grid': True,\n",
+    "        'axes.grid': False,\n",
     "        'xtick.major.width': 1,\n",
     "        'ytick.major.width': 1\n",
     "        })\n",
@@ -126,29 +137,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define path\n",
-    "data_path = \"./data\""
+    "# Set paths\n",
+    "path = \".\"\n",
+    "os.chdir(path)\n",
+    "data_path = path + \"/data\"\n",
+    "output_path = path + \"/outputs\"\n",
+    "fig_path = path + \"/figs\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Input data\n",
+    "working_data_filename = \"working_data_sans_dewey_processed.pkl\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le Fichier de données contient 154508 lignes et  10 colonnes\n"
+     ]
+    }
+   ],
    "source": [
     "# Import data\n",
-    "df = pd.read_csv(os.path.join(data_path, \"working_data_rameau_preprocessed_datav1.csv\"), converters={\"rameau_list_unstack\": eval}, index_col=0)\n",
-    "print(df.shape)\n",
-    "df.head()"
+    "df = pd.read_pickle(os.path.join(data_path, working_data_filename))\n",
+    "print(f\"le Fichier de données contient {df.shape[0]} lignes et  {df.shape[1]} colonnes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +200,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,15 +242,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoding labels\n",
+      "Labels encoded\n",
+      "splitting data\n"
+     ]
+    }
+   ],
    "source": [
     "# Split data\n",
     "X_train, y_train, X_test, y_test, index_train, index_test, classes, mlb = iterative_train_test_split_dataframe(\n",
     "    df,\n",
     "    corpus=\"DESCR_processed\",\n",
-    "    col_label=\"rameau_list_unstack\",\n",
+    "    col_label=\"rameau_concepts\",\n",
     "    test_size=0.25)"
    ]
   },
@@ -277,6 +320,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -458,56 +502,10 @@
     "        clf = OneVsRestClassifier(model)\n",
     "    else:\n",
     "        clf = model\n",
-    "    get_ipython().run_line_magic('time', 'clf.fit(X_train, y_train)  # Training the model on dataset')\n",
+    "    clf.fit(X_train, y_train)  # Training the model on dataset')\n",
     "    if save:\n",
     "        save_model_pkl(clf, str(algo + \".pickle\"))\n",
     "    return clf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compute metrics\n",
-    "def metricsReport(modelName, test_labels, predictions, print_metrics=False):\n",
-    "    accuracy = accuracy_score(test_labels, predictions)\n",
-    "    macro_precision = precision_score(test_labels, predictions, average='macro')\n",
-    "    macro_recall = recall_score(test_labels, predictions, average='macro')\n",
-    "    macro_f1 = f1_score(test_labels, predictions, average='macro')\n",
-    "    micro_precision = precision_score(test_labels, predictions, average='micro')\n",
-    "    micro_recall = recall_score(test_labels, predictions, average='micro')\n",
-    "    micro_f1 = f1_score(test_labels, predictions, average='micro')\n",
-    "    hamLoss = hamming_loss(test_labels, predictions)\n",
-    "    lrap = label_ranking_average_precision_score(test_labels, predictions.toarray())\n",
-    "    lrl = label_ranking_loss(test_labels, predictions.toarray())\n",
-    "    cov_error = coverage_error(test_labels, predictions.toarray())\n",
-    "    EMR = np.all(test_labels == predictions, axis=1).mean()\n",
-    "    if print_metrics:\n",
-    "        # Print result\n",
-    "        print(\"------\" + modelName + \" Model Metrics-----\")\n",
-    "        print(f\"Accuracy: {accuracy:.4f}\\nHamming Loss: {hamLoss:.4f}\\nCoverage Error: {cov_error:.4f}\")\n",
-    "        print(f\"Exact Match Ratio: {EMR:.4f}\\nRanking Loss: {lrl:.4f}\\nLabel Ranking avarge precision (LRAP): {lrap:.4f}\")\n",
-    "        print(f\"Precision:\\n  - Macro: {macro_precision:.4f}\\n  - Micro: {micro_precision:.4f}\")\n",
-    "        print(f\"Recall:\\n  - Macro: {macro_recall:.4f}\\n  - Micro: {micro_recall:.4f}\")\n",
-    "        print(f\"F1-measure:\\n  - Macro: {macro_f1:.4f}\\n  - Micro: {micro_f1:.4f}\")\n",
-    "    return {\n",
-    "        \"Accuracy\": accuracy,\n",
-    "        \"Hamming Loss\": hamLoss,\n",
-    "        \"Coverage Error\": cov_error,\n",
-    "        \"Exact Match Ratio\": EMR,\n",
-    "        \"Ranking Loss\": lrl,\n",
-    "        \"Label Ranking avarge precision (LRAP)\": lrap,\n",
-    "        \"Precision\": {\n",
-    "            \"Macro\": macro_precision,\n",
-    "            \"Micro\": micro_precision},\n",
-    "        \"Recall\": {\n",
-    "            \"Macro\": macro_recall,\n",
-    "            \"Micro\": micro_recall},\n",
-    "        \"F1-measure\": {\n",
-    "            \"Macro\": macro_f1,\n",
-    "            \"Micro\": micro_f1}}"
    ]
   },
   {
@@ -531,6 +529,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils_metrics import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Run models\n",
     "for model in model_list:\n",
     "    for transf in transf_list:\n",
@@ -546,7 +553,7 @@
     "        predictions = clf.predict(X_test_vect)\n",
     "        print(\"predictions done\")\n",
     "        print(\"Computing metrics\")\n",
-    "        ModelsPerformance[model_name] = metricsReport(model, y_test, predictions, print_metrics=True)"
+    "        ModelsPerformance[model_name] = label_metrics_report(model, y_test, predictions, zero_division=\"warn\", print_metrics=True)"
    ]
   },
   {
@@ -880,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
