commit test pour la démo git jupyterlab

--- a/tests/helloworld.ipynb
+++ b/tests/helloworld.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import librairies.\n",
+    "# Import librairies\n",
     "from rich.console import Console"
    ]
   },
