[WIP] improve ANNIF training on concepts and chains

--- a/work_with_annif.ipynb
+++ b/work_with_annif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,18 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select data to use\n",
     "data = \"working_data_sans_dewey.pkl\"\n",
-    "rameau_file = \"rameau_Tf_Td_withURI.csv\""
+    "rameau_file = \"rameau_Tf_Td.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "4  [Science-fiction américaine, Traductions franç...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "19  https://www.idref.fr/203771370  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "9                            Outils à métaux  https://www.idref.fr/034686940"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1287,25 +1287,29 @@
        " 'Project ID               Project Name                                 Language  Trained',\n",
        " '---------------------------------------------------------------------------------------',\n",
        " 'rameau-tfidf-snowball-fr TF-IDF French RAMEAU with snowball lemma     fr        True   ',\n",
-       " 'rameau-tfidf-spacy-fr    TF-IDF French RAMEAU with spacy lemma        fr        True   ',\n",
-       " 'rameau-fasttext-fr       FastText French RAMEAU                       fr        True   ',\n",
        " 'rameau-fasttext-snowball-frFastText French RAMEAU                       fr        False  ',\n",
-       " 'rameau-svc-fr            SVC French RAMEAU                            fr        False  ',\n",
+       " 'rameau-yake-snowball-fr  Yake French RAMEAU                           fr        True   ',\n",
+       " 'rameau-mllm-snowball-fr  RAMEAU MLLM project                          fr        True   ',\n",
+       " 'rameau-omikuji-snowball-frOmikuji Parabel French                       fr        True   ',\n",
+       " 'rameau-tfidf-fr          TF-IDF French RAMEAU with spacy lemma        fr        False  ',\n",
+       " 'rameau-fasttext-fr       FastText French RAMEAU                       fr        True   ',\n",
        " 'rameau-yake-fr           Yake French RAMEAU                           fr        True   ',\n",
        " 'rameau-omikuji-parabel-frOmikuji Parabel French                       fr        True   ',\n",
        " 'rameau-mllm-fr           RAMEAU MLLM project                          fr        True   ',\n",
-       " 'rameau-mllm-snowball-fr  RAMEAU MLLM project                          fr        True   ',\n",
-       " '2023-06-28 11:21:42.549857: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA',\n",
+       " '2023-06-29 19:19:10.571042: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA',\n",
        " 'To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.',\n",
        " 'rameau-ensemble-mllm-fr  RAMEAU ensemble with MLLM French             fr        False  ',\n",
-       " 'rameau-simple-ensemble-fasttext-frRAMEAU ensemble with Fasttext French         fr        True   ',\n",
-       " 'rameau-simple-ensemble-all-frRAMEAU ensemble French                       fr        True   ',\n",
-       " 'rameau-simple-ensemble-mllm-frRAMEAU ensemble with MLLM French             fr        True   ',\n",
+       " 'rameau-simple-ensemble-fasttext-frRAMEAU ensemble with Fasttext French         fr        False  ',\n",
+       " 'rameau-simple-ensemble-all-frRAMEAU ensemble French                       fr        False  ',\n",
+       " 'rameau-simple-ensemble-allButFastext-frRAMEAU ensemble French                       fr        True   ',\n",
+       " 'rameau-simple-ensemble-mllm-frRAMEAU ensemble with MLLM French             fr        False  ',\n",
+       " 'rameau-ensemble-allButFastext-frRAMEAU ensemble French                       fr        True   ',\n",
        " 'rameau-ensemble-fasttext-frRAMEAU ensemble with FastText French         fr        True   ',\n",
-       " 'rameau-pav-MLLM-fr       RAMEAU PAV ensemble project with MLLM        fr        True   ']"
+       " 'rameau-pav-MLLM-fr       RAMEAU PAV ensemble project with MLLM        fr        True   ',\n",
+       " 'rameau-pav-allButFastext-frRAMEAU ensemble French                       fr        True   ']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,12 +1330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select project and parameters\n",
-    "project = \"rameau-mllm-snowball-fr\"\n",
+    "project = \"rameau-pav-allButFastext-fr\"\n",
     "njobs = 0\n",
     "input_file = train_tsv_path\n",
     "max_nb_concepts = 10\n",
@@ -1344,26 +1348,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/aurelie/ABES/labo-indexation-ai/ANNIF/reports/rameau-mllm-snowball-fr.json'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metric_file_path"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1373,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1381,12 +1365,8 @@
      "output_type": "stream",
      "text": [
       "/bin/bash: /home/aurelie/anaconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "Backend mllm: starting train\n",
-      "Backend mllm: preparing training data\n",
-      "/home/aurelie/anaconda3/envs/abes_index/lib/python3.10/site-packages/sklearn/feature_extraction/text.py:528: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
-      "  warnings.warn(\n",
-      "Backend mllm: training model\n",
-      "^C\n"
+      "Backend pav: creating PAV models\n",
+      "Backend pav: creating PAV model for source rameau-tfidf-snowball-fr, min_docs=3\n"
      ]
     }
    ],
