--- a/work_with_annif_chains.ipynb
+++ b/work_with_annif_chains.ipynb
@@ -1101,7 +1101,7 @@
     "            chained_uri = []\n",
     "            for item in items:\n",
     "                chained_uri.append(label2uri[item])\n",
-    "            chain_df.loc[i, \"uri\"] = \"--\".join(chained_uri)\n",
+    "            chain_df.loc[i, \"uri\"] = \"#--\".join(chained_uri)\n",
     "            i += 1 \n",
     "            \n",
     "    return chain_df"
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1171,27 +1171,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Population -- Statistiques -- Vingtième siècle</td>\n",
-       "      <td>https://www.idref.fr/027546071--http://www.idr...</td>\n",
+       "      <td>https://www.idref.fr/027546071#--http://www.id...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Esclavage -- Dans l'art</td>\n",
-       "      <td>https://www.idref.fr/027224295--https://www.id...</td>\n",
+       "      <td>https://www.idref.fr/027224295#--https://www.i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Physique -- Dans l'art</td>\n",
-       "      <td>https://www.idref.fr/027247015--https://www.id...</td>\n",
+       "      <td>https://www.idref.fr/027247015#--https://www.i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Violences sexuelles -- Prévention</td>\n",
-       "      <td>https://www.idref.fr/027343758--https://www.id...</td>\n",
+       "      <td>https://www.idref.fr/027343758#--https://www.i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Transition écologique -- Finances</td>\n",
-       "      <td>https://www.idref.fr/189110813--https://www.id...</td>\n",
+       "      <td>https://www.idref.fr/189110813#--https://www.i...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1206,14 +1206,14 @@
        "0               Transition écologique -- Finances   \n",
        "\n",
        "                                                 uri  \n",
-       "0  https://www.idref.fr/027546071--http://www.idr...  \n",
-       "0  https://www.idref.fr/027224295--https://www.id...  \n",
-       "0  https://www.idref.fr/027247015--https://www.id...  \n",
-       "0  https://www.idref.fr/027343758--https://www.id...  \n",
-       "0  https://www.idref.fr/189110813--https://www.id...  "
+       "0  https://www.idref.fr/027546071#--http://www.id...  \n",
+       "0  https://www.idref.fr/027224295#--https://www.i...  \n",
+       "0  https://www.idref.fr/027247015#--https://www.i...  \n",
+       "0  https://www.idref.fr/027343758#--https://www.i...  \n",
+       "0  https://www.idref.fr/189110813#--https://www.i...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
        "4            Sa-skya-pa  https://www.idref.fr/029895561"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1324,19 +1324,25 @@
       "Militaires réunionnais,https://www.idref.fr/031875459\n",
       "Construction à l'épreuve de la sécheresse,https://www.idref.fr/032370083\n",
       "Missionnaires suisses,https://www.idref.fr/032878117\n",
-      "Militaires ivoiriens,https://www.idref.fr/034423982\n",
+      "Militaires ivoiriens,https://www.idref.fr/034423982\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "/bin/bash: /home/aurelie/anaconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "Coutumes alimentaires -- Aspect social,https://www.idref.fr/027233464--https://www.idref.fr/027790088\n",
-      "Sociologie -- Recherche,https://www.idref.fr/049647490--https://www.idref.fr/027315754\n",
-      "Isolation thermique -- Aspect environnemental,https://www.idref.fr/027235394--https://www.idref.fr/027587886\n",
-      "\"Nombre, Idée de -- Chez l'enfant\",https://www.idref.fr/027241181--https://www.idref.fr/16719402X\n",
-      "Risques professionnels -- Prévention,https://www.idref.fr/165201010--https://www.idref.fr/02724525X\n",
-      "Population -- Statistiques -- Vingtième siècle,https://www.idref.fr/027546071--http://www.idref.fr/028627008--https://www.idref.fr/027338983\n",
-      "Esclavage -- Dans l'art,https://www.idref.fr/027224295--https://www.idref.fr/027966216\n",
-      "Physique -- Dans l'art,https://www.idref.fr/027247015--https://www.idref.fr/027966216\n",
-      "Violences sexuelles -- Prévention,https://www.idref.fr/027343758--https://www.idref.fr/02724525X\n",
-      "Transition écologique -- Finances,https://www.idref.fr/189110813--https://www.idref.fr/027606511\n"
+      "Coutumes alimentaires -- Aspect social,https://www.idref.fr/027233464#--https://www.idref.fr/027790088\n",
+      "Sociologie -- Recherche,https://www.idref.fr/049647490#--https://www.idref.fr/027315754\n",
+      "Isolation thermique -- Aspect environnemental,https://www.idref.fr/027235394#--https://www.idref.fr/027587886\n",
+      "\"Nombre, Idée de -- Chez l'enfant\",https://www.idref.fr/027241181#--https://www.idref.fr/16719402X\n",
+      "Risques professionnels -- Prévention,https://www.idref.fr/165201010#--https://www.idref.fr/02724525X\n",
+      "Population -- Statistiques -- Vingtième siècle,https://www.idref.fr/027546071#--http://www.idref.fr/028627008#--https://www.idref.fr/027338983\n",
+      "Esclavage -- Dans l'art,https://www.idref.fr/027224295#--https://www.idref.fr/027966216\n",
+      "Physique -- Dans l'art,https://www.idref.fr/027247015#--https://www.idref.fr/027966216\n",
+      "Violences sexuelles -- Prévention,https://www.idref.fr/027343758#--https://www.idref.fr/02724525X\n",
+      "Transition écologique -- Finances,https://www.idref.fr/189110813#--https://www.idref.fr/027606511\n"
      ]
     }
    ],
@@ -1349,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2036,8 @@
      "text": [
       "/bin/bash: /home/aurelie/anaconda3/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
       "Backend tfidf: transforming subject corpus\n",
-      "Backend tfidf: creating vectorizer\n"
+      "Backend tfidf: creating vectorizer\n",
+      "Backend tfidf: creating similarity index\n"
      ]
     }
    ],
