WIP: file cleaning and better chains and concepts treatment

--- a/create_data_for_deep_learning.ipynb
+++ b/create_data_for_deep_learning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original dataset:  (154508, 10)\n",
-      "train dataset:  (125264, 10)\n",
-      "test dataset:  (29244, 10)\n",
+      "Original dataset:  (154447, 10)\n",
+      "train dataset:  (125220, 10)\n",
+      "test dataset:  (29227, 10)\n",
       "validation dataset:  (100, 10)\n"
      ]
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "MultiLabelBinarizer()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,16 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/aurelie/anaconda3/envs/abes_index/lib/python3.10/site-packages/sklearn/preprocessing/_label.py:895: UserWarning: unknown class(es) [''] will be ignored\n",
-      "  warnings.warn(\n",
-      "/home/aurelie/anaconda3/envs/abes_index/lib/python3.10/site-packages/sklearn/preprocessing/_label.py:895: UserWarning: unknown class(es) [''] will be ignored\n",
+      "/home/aurelie/anaconda3/envs/abes_index/lib/python3.10/site-packages/sklearn/preprocessing/_label.py:895: UserWarning: unknown class(es) ['', 'La  Belle et la bête (conte)', 'La  Diagonale des Fous', 'Le  Bon Samaritain (parabole biblique)', 'Le  Déluge (épisode biblique)', 'Le  Georges Philippar (paquebot)', 'Le  Petit Chaperon rouge (conte)', 'Le  Petit Hans (psychanalyse)', 'Le  Petit Poucet (conte)', 'Le  Rochefort (yacht)', 'Le  Saint-Philippe (navire à voiles ; 1693-1715)', 'Le  Tabernacle (épisode biblique)', 'Les  Animaux en voyage (conte)', 'Les  Deux Ange (barque)', 'Les  Trois petits cochons (conte)'] will be ignored\n",
       "  warnings.warn(\n"
      ]
     },
@@ -194,6 +192,14 @@
       "train labels: [('Culture populaire', 'Diffusion de la culture', 'Politique culturelle'), ('Complexe de castration', 'Psychanalyse', 'Rêves'), ('Culture',), ('Science-fiction américaine', 'Traductions françaises'), ('Photographie',)]\n",
       "test labels: [('Structuralisme',), ('Mathématiques économiques', 'Théorie des jeux'), ('Crise économique (1973)',), ('Magie',), ('Linguistique', 'Linguistique mathématique', \"Manuels d'enseignement\", 'Mathématiques', 'Méthodes graphiques', 'Théorie des ensembles', 'Théorie des graphes', 'Étude et enseignement')]\n",
       "valid labels: [('Bureaucratie', 'Classes dirigeantes', 'Hauts fonctionnaires', 'Hommes politiques', 'Pouvoir (sciences sociales)', 'Pratiques politiques'), ('Dollar américain', 'Finances internationales', 'Politique monétaire'), ('Intellectuels', 'Intellectuels français'), ('Bouddhisme',), ('Histoire', 'Mathématiques', \"Psychologie de l'apprentissage\", 'Sociologie', 'Étude et enseignement')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aurelie/anaconda3/envs/abes_index/lib/python3.10/site-packages/sklearn/preprocessing/_label.py:895: UserWarning: unknown class(es) ['', 'La  Femme adultère (épisode biblique)', 'La  Tour de Babel (épisode biblique)', 'Le  Chat botté (conte)', 'Le  Français (goélette)', 'Le  Petit Chaperon rouge (conte)', \"Les  Disciples d'Emmaüs (épisode biblique)\", 'Les  Trois Grâces (art)'] will be ignored\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -211,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,6 +229,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 125220 entries, 0 to 125219\n",
+      "Columns: 103021 entries, !Xóõ (langue) to Ṭār (tambour), Musique de\n",
+      "dtypes: int64(103021)\n",
+      "memory usage: 96.1 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check memory usage\n",
+    "df_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -230,25 +258,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train dataset : (125264, 103022)\n",
-      "test dataset : (29244, 103022)\n",
-      "valid dataset : (100, 103022)\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 125220 entries, 0 to 125219\n",
+      "Columns: 103021 entries, !Xóõ (langue) to Ṭār (tambour), Musique de\n",
+      "dtypes: Sparse[int64, 0](103021)\n",
+      "memory usage: 3.8 MB\n"
      ]
     }
    ],
    "source": [
-    "# Add Description\n",
-    "df_train[\"descr\"] = train_df[\"DESCR\"]\n",
-    "print(\"train dataset :\", df_train.shape)\n",
-    "df_test[\"descr\"] = test_df[\"DESCR\"]\n",
-    "print(\"test dataset :\", df_test.shape)\n",
-    "df_valid100[\"descr\"] = valid_df[\"DESCR\"]\n",
-    "print(\"valid dataset :\", df_valid100.shape)"
+    "# Convert to sparse matrix\n",
+    "sdf_train = df_train.astype(pd.SparseDtype(\"int\", 0))\n",
+    "sdf_train.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train dataset : (125220, 103022)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 125220 entries, 0 to 125219\n",
+      "Columns: 103022 entries, !Xóõ (langue) to descr\n",
+      "dtypes: Sparse[int64, 0](103021), object(1)\n",
+      "memory usage: 4.8+ MB\n",
+      "train dataset memory usage: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finalize matrix by adding description\n",
+    "sdf_train[\"descr\"] = train_df[\"DESCR\"]\n",
+    "print(\"train dataset :\", sdf_train.shape)\n",
+    "print(\"train dataset memory usage:\", sdf_train.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -261,42 +313,83 @@
     }
    ],
    "source": [
-    "# get one row\n",
+    "# Check access to data\n",
     "row_id = 64\n",
-    "sample_row = df_train.iloc[row_id]\n",
+    "sample_row = sdf_train.iloc[row_id]\n",
     "sample_descr = sample_row.descr\n",
     "sample_labels = sample_row[mlb.classes_]\n",
     "\n",
     "print(\"Description: \", sample_descr)\n",
-    "print(\"Concepts: \", sample_labels[sample_labels != 0].to_dict())\n"
+    "print(\"Concepts: \", sample_labels[sample_labels != 0].to_dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test dataset : (29227, 103022)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 29227 entries, 0 to 29226\n",
+      "Columns: 103022 entries, !Xóõ (langue) to descr\n",
+      "dtypes: Sparse[int64, 0](103021), object(1)\n",
+      "memory usage: 1.1+ MB\n",
+      "test dataset memory usage: None\n",
+      "\n",
+      "valid dataset : (100, 103022)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Columns: 103022 entries, !Xóõ (langue) to descr\n",
+      "dtypes: Sparse[int64, 0](103021), object(1)\n",
+      "memory usage: 4.1+ KB\n",
+      "valid dataset memory usage: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Same process for valid and test datasets\n",
+    "sdf_test = df_test.astype(pd.SparseDtype(\"int\", 0))\n",
+    "sdf_test[\"descr\"] = test_df[\"DESCR\"]\n",
+    "print(\"test dataset :\", sdf_test.shape)\n",
+    "print(\"test dataset memory usage:\", sdf_test.info())\n",
+    "\n",
+    "sdf_valid100 = df_valid100.astype(pd.SparseDtype(\"int\", 0))\n",
+    "sdf_valid100[\"descr\"] = valid_df[\"DESCR\"]\n",
+    "print(\"\\nvalid dataset :\", sdf_valid100.shape)\n",
+    "print(\"valid dataset memory usage:\", sdf_valid100.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Save data\n",
-    "df_train.to_pickle(os.path.join(data_path, \"train_dataset_for_DL.pkl\"))\n",
-    "df_test.to_pickle(os.path.join(data_path, \"test_dataset_for_DL.pkl\"))\n",
-    "df_valid100.to_pickle(os.path.join(data_path, \"valid100_dataset_for_DL.pkl\"))"
+    "sdf_train.to_pickle(os.path.join(data_path, \"train_dataset_for_DL.pkl\"))\n",
+    "sdf_test.to_pickle(os.path.join(data_path, \"test_dataset_for_DL.pkl\"))\n",
+    "sdf_valid100.to_pickle(os.path.join(data_path, \"valid100_dataset_for_DL.pkl\")) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_csv(os.path.join(data_path, \"train_dataset_for_DL.csv\"))\n",
-    "df_test.to_csv(os.path.join(data_path, \"test_dataset_for_DL.csv\"))\n",
-    "df_valid100.to_csv(os.path.join(data_path, \"valid100_dataset_for_DL.csv\"))"
+    "## Save data (take long time : ~5min)\n",
+    "sdf_train.to_csv(os.path.join(data_path, \"train_dataset_for_DL.csv\"))\n",
+    "sdf_test.to_csv(os.path.join(data_path, \"test_dataset_for_DL.csv\"))\n",
+    "sdf_valid100.to_csv(os.path.join(data_path, \"valid100_dataset_for_DL.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
